  the category is empty
- make ZMCategory have a proper default constructor
- make language selection in static page editor actually work
- change ZMTheme to use languageId rather than languageName for static page
  content methods (languageName was actually the directory to mak matters
	worse!); also non existing language directories are now created on save
- add settnig 'defaultAccessLevel'; default is null so no change; however,
  setting this to ZM_ACCOUNT_TYPE_REGISTERED would mean *all pages** require
  to be logged in (unless configured differently)
- introduce ZM_FILENAME_CATEGORY and refactor most of ZMIndexController into
  ZMCategoryController
- fix billing address controller
- patch zm_useo2 to support ZM_FILENAME_CATEGORY

Release 0.8.6.1
- fix hardcoded tablename in ZMBanners; #1856664

Release 0.8.6
- added setting 'isAccountNickname' to control use of nickname in account
  creation
- removed ZMRuntime::isBBActive(); this requires a couple template changes;
  please refer to the default theme changes to see what needs to be done
- removed ZMRuntime::reconnectDB()
- removed all phpBB references (functions, nickname validation, controller
  code) plus the settings 'isEnablePHPBBLinks'
- fix nickname population in ZMAccount
- fix broken ZMView::getMappingId()
- populate nickname when loading accounts from db
- use user name/email address for contact us email sender details (so reply to
  email will reply to user, rather than the store email)
- fix missing crumbtrails when form submission fails 
- added new settings 'isEnableStock' and 'isAllowLowStockCheckout'
- do not use printf(..) if no parameters are given to replace '%s' or similar
- added generic properties support to ZMModel; this means it is is now
  possible to attach custom properties to all model classes
- add code to evaluate cPath directly rather than use zen-cart's code (not
  active yet)
- add support for init plugins (no loader support, so single file only please)