@@ -75,7 +75,6 @@
     //** files **//
 
     define ('ZM_FILENAME_COMPARE_PRODUCTS', 'product_comparison');
-    define ('ZM_FILENAME_SOURCE_VIEW', 'source_view');
     define ('ZM_FILENAME_RSS', 'rss');
     define ('ZM_FILENAME_CHECKOUT_GUEST', 'checkout_guest');
     define ('ZM_FILENAME_GUEST_HISTORY', 'guest_history');
