@@ -90,13 +90,14 @@ Release 0.8.7
 - change ZMTheme to use languageId rather than languageName for static page
   content methods (languageName was actually the directory to mak matters
 	worse!); also non existing language directories are now created on save
-- add settnig 'defaultAccessLevel'; default is null so no change; however,
+- add setting 'defaultAccessLevel'; default is null so no change; however,
   setting this to ZM_ACCOUNT_TYPE_REGISTERED would mean *all pages** require
   to be logged in (unless configured differently)
 - introduce ZM_FILENAME_CATEGORY and refactor most of ZMIndexController into
   ZMCategoryController
 - fix billing address controller
 - patch zm_useo2 to support ZM_FILENAME_CATEGORY
+- update demo design, add view source (sorry!)
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
